<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.sdu.rnyati.assignment2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/phoneTextField"
        android:layout_marginStart="12dp"
        android:id="@+id/dateTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fNameTextField"
        android:hint="Enter First Name"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/textView"
        android:layout_marginStart="22dp"
        android:text="@string/first_name"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setDateButton"
        android:onClick="setDateClicked"
        android:layout_below="@+id/phoneTextField"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lNameTextField"
        android:hint="Enter Last Name"
        android:textSize="14sp"
        android:layout_below="@+id/fNameTextField"
        android:layout_marginTop="13dp"
        android:layout_alignStart="@+id/fNameTextField"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/lNameTextField"
        android:layout_alignBottom="@+id/lNameTextField"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="@string/bith_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/setDateButton"
        android:layout_alignBottom="@+id/setDateButton"
        android:layout_alignStart="@+id/textView5" />

    <Button
        android:text="@string/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="onDoneClicked"
        android:layout_marginEnd="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneTextField"
        android:hint="Enter phone"
        android:textSize="14sp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/phoneTextField"
        android:layout_alignBottom="@+id/phoneTextField"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ageTextField"
        android:hint="Enter age"
        android:textSize="14sp"
        android:layout_below="@+id/lNameTextField"
        android:layout_marginTop="14dp"
        android:layout_alignStart="@+id/lNameTextField"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/ageTextField"
        android:layout_alignBottom="@+id/ageTextField"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:text="@string/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="setCountryStateClicked"
        android:textSize="14sp"
        android:layout_below="@+id/setDateButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/country_and_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="12sp"
        android:layout_alignTop="@+id/button3"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countryTextView"
        tools:text="country"
        android:layout_alignTop="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stateTextView"
        tools:text="state"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignStart="@+id/countryTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTextField"
        android:hint="Enter email"
        android:textSize="14sp"
        android:layout_below="@+id/ageTextField"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_alignStart="@+id/ageTextField" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/emailTextField"
        android:layout_alignBottom="@+id/emailTextField"
        android:layout_alignStart="@+id/textView3" />
</RelativeLayout>
